--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,6 @@ http {
 
     include             /etc/nginx/includes/gzip;
 
-    # include             /etc/nginx/conf.d/*;
+    include             /etc/nginx/conf.d/*;
     include             /etc/nginx/sites-enabled/*.conf;
 }
